docsite: Fix mobile docs title
Fix mobile docs title to never line wrap as there is typically enough space
and the line-wrap arguably looks stranger then the clip.

--- a/frontend/preview/css/index.css
+++ b/frontend/preview/css/index.css
@@ -18,6 +18,12 @@ header.topnav {
   border-bottom: 1px solid var(--border-color);
 }
 
+header.topnav .center.mobile span {
+  overflow: hidden;
+  white-space: nowrap;
+  padding: 0 16px;
+}
+
 main {
   grid-area: main;
   height: 100%;
